<resources>
    <string name="app_name">NewsApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="news_title">Top News</string>
    <string name="business_news_title">Business</string>
    <string name="detail_menu_add">Add</string>
    <string name="detail_menu_share">Share</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="headings">Headings</string>
    <string name="about">About</string>
    <string name="entertainment_news_title">Entertainment</string>
    <string name="favorites">Favorites</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="tech">Technology</string>
    <string name="snackbar_msg">Added to Favorites</string>
    <string name="search">Search</string>
    <string name="favorites_msg">Selected news will be displayed here</string>
    <string name="developer_name">Shagdarov Almas</string>
    <string name="developer_email">almas_shagdarov@mail.ru</string>
    <string name="imageurl">imageUrl</string>
</resources>
