<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeViewPageFragment"
            android:title="@string/home"
            android:icon="@drawable/ic_home" />
        <item
            android:id="@+id/favoritesFragment"
            android:title="@string/favorites"
            android:icon="@drawable/ic_favorites" />
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings" />
        <item
            android:id="@+id/headingsFragment"
            android:title="@string/headings"
            android:icon="@drawable/ic_heading" />
        <item
            android:id="@+id/about"
            android:title="@string/about"
            android:icon="@drawable/ic_about" />
    </group>
</menu>